force-app/main/default/objects/ServiceAuthority__c/ServiceAuthority__c.object-meta.xml
<CustomObject>
    <label>サービス権限</label>
    <nameField>
        <displayFormat>SA{YYYY}{MM}-{000000}</displayFormat>
        <label>オブジェクトID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>