force-app/main/default/objects/ServiceAuthority__c/fields/AppliedFirstMonthFree__c.field-meta.xml
<CustomField>
    <fullName>AppliedFirstMonthFree__c</fullName>
    <label>初月無料適用済み</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>