force-app/main/default/objects/ServiceAuthority__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先責任者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>サービス権限</relationshipLabel>
    <relationshipName>ServiceAuthorities</relationshipName>
    <type>Lookup</type>
</CustomField>