force-app/main/default/objects/ServiceAuthority__c/fields/ContentId__c.field-meta.xml
<CustomField>
    <fullName>ContentId__c</fullName>
    <label>コンテンツID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>