force-app/main/default/objects/ServiceAuthority__c/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <externalId>true</externalId>
    <label>契約ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>