force-app/main/default/objects/ServiceAuthority__c/fields/ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDate__c</fullName>
    <label>契約開始日時</label>
    <type>DateTime</type>
</CustomField>