force-app/main/default/objects/ServiceAuthority__c/fields/ContractStatusId__c.field-meta.xml
<CustomField>
    <fullName>ContractStatusId__c</fullName>
    <label>契約ステータス</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>