force-app/main/default/objects/ServiceAuthority__c/fields/EbisuRegistUserId__c.field-meta.xml
<CustomField>
    <fullName>EbisuRegistUserId__c</fullName>
    <label>えびす登録ユーザ（東洋経済会員ID）</label>
    <length>10</length>
    <type>Text</type>
</CustomField>