force-app/main/default/objects/ServiceAuthority__c/fields/EbisuUpdateUserId__c.field-meta.xml
<CustomField>
    <fullName>EbisuUpdateUserId__c</fullName>
    <label>えびす更新ユーザ</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>