force-app/main/default/objects/ServiceAuthority__c/fields/ExpireDate__c.field-meta.xml
<CustomField>
    <fullName>ExpireDate__c</fullName>
    <label>契約終了日時</label>
    <type>DateTime</type>
</CustomField>