force-app/main/default/objects/ServiceAuthority__c/fields/MemberId__c.field-meta.xml
<CustomField>
    <fullName>MemberId__c</fullName>
    <label>会員ID（えびすマート）</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>