force-app/main/default/objects/ServiceAuthority__c/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <label>受注／キャンペーンID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>