force-app/main/default/objects/ServiceAuthority__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>優先順位</label>
    <length>10</length>
    <type>Text</type>
</CustomField>