force-app/main/default/objects/ServiceAuthority__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商品</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>サービス権限</relationshipLabel>
    <relationshipName>ProductId</relationshipName>
    <type>Lookup</type>
</CustomField>