force-app/main/default/objects/ServiceAuthority__c/fields/SalesforceId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceId__c</fullName>
    <label>SalesforceID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>