force-app/main/default/objects/ServiceAuthority__c/fields/ServiceId__c.field-meta.xml
<CustomField>
    <fullName>ServiceId__c</fullName>
    <label>サービスID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>