force-app/main/default/objects/ServiceAuthority__c/fields/ServiceTypeId__c.field-meta.xml
<CustomField>
    <fullName>ServiceTypeId__c</fullName>
    <label>提供区分</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>